--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,9 +16,9 @@
     <!-- Favicons - Place favicon.ico in the root directory -->
     
     <link rel="icon" type="image/png" sizes="16x16" href="/img/logo.svg">
-    <link rel="manifest" href="assets/img/favicons/manifest.json">
+    <link rel="manifest" href="/mindcartergit/assets/img/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/img/favicons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/mindcartergit/assets/img/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!--==============================
@@ -33,17 +33,17 @@
 	    All CSS File
 	============================== -->
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/bootstrap.min.css">
     <!-- Fontawesome Icon -->
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/fontawesome.min.css">
     <!-- Magnific Popup -->
-    <link rel="stylesheet" href="assets/css/magnific-popup.min.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/magnific-popup.min.css">
     <!-- Slick Slider -->
-    <link rel="stylesheet" href="assets/css/slick.min.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/slick.min.css">
     <!-- Nice Select -->
-    <link rel="stylesheet" href="assets/css/nice-select.min.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/nice-select.min.css">
     <!-- Theme Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/mindcartergit/assets/css/style.css">
 
 </head>
 
@@ -51,30 +51,30 @@
 		
 		<slot />
 
-  <script src="assets/js/vendor/jquery-3.6.0.min.js" is:inline></script>
+  <script src="/mindcartergit/assets/js/vendor/jquery-3.6.0.min.js" is:inline></script>
     <!-- Slick Slider -->
-    <script src="assets/js/slick.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/slick.min.js" is:inline></script>
     <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/bootstrap.min.js" is:inline></script>
     <!-- Magnific Popup -->
-    <script src="assets/js/jquery.magnific-popup.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/jquery.magnific-popup.min.js" is:inline></script>
     <!-- Counter Up -->
-    <script src="assets/js/jquery.counterup.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/jquery.counterup.min.js" is:inline></script>
     <!-- Circle Progress -->
-    <script src="assets/js/circle-progress.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/circle-progress.js" is:inline></script>
     <!-- Range Slider -->
-    <script src="assets/js/jquery-ui.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/jquery-ui.min.js" is:inline></script>
     <!-- Isotope Filter -->
-    <script src="assets/js/imagesloaded.pkgd.min.js" is:inline></script>
-    <script src="assets/js/isotope.pkgd.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/imagesloaded.pkgd.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/isotope.pkgd.min.js" is:inline></script>
     <!-- Tilt JS -->
-    <script src="assets/js/tilt.jquery.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/tilt.jquery.min.js" is:inline></script>
     <!-- Tweenmax JS -->
-    <script src="assets/js/tweenmax.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/tweenmax.min.js" is:inline></script>
     <!-- Nice Select JS -->
-    <script src="assets/js/nice-select.min.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/nice-select.min.js" is:inline></script>
 
     <!-- Main Js File -->
-    <script src="assets/js/main.js" is:inline></script>
+    <script src="/mindcartergit/assets/js/main.js" is:inline></script>
 	</body>
 </html>
