--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ import Layout from '../layouts/Layout.astro';
                 <div class="row align-items-center justify-content-between">
                     <div class="col-auto">
                         <div class="header-logo flex gap-4">
-                            <a ><img src="/img/logo-white.svg" class=" w-24" alt="Konta"></a>
-                            <a ><img src="/assets/img/logomind.svg" class=" w-24" alt="Konta"></a>
+                            <a ><img src="/mindcartergit/img/logo-white.svg" class=" w-24" alt="Konta"></a>
+                            <a ><img src="/mindcartergit/assets/img/logomind.svg" class=" w-24" alt="Konta"></a>
 
                         </div>
                     </div>
@@ -61,8 +61,8 @@ Hero Area
 
 
             <div class="th-hero-slide">
-                <div class="th-hero-bg" data-bg-src="/assets/img/bg11.jpg">
-                    <img src="/assets/img/hero/hero_overlay_2.png" alt="Hero Image">
+                <div class="th-hero-bg" data-bg-src="/mindcartergit/assets/img/bg11.jpg">
+                    <img src="/mindcartergit/assets/img/hero/hero_overlay_2.png" alt="Hero Image">
                 </div>
                 <div class="big-text" data-ani="slideindown" data-ani-delay="0.2s">Synthesis</div>
                 <div class="container th-container">
@@ -91,19 +91,19 @@ Hero Area
 About Area  
 ==============================-->
     <div class="overflow-hidden pt-24 pb-10" id="about-sec">
-        <!-- <div class="shape-mockup jump d-md-block d-none" data-right="0" data-bottom="10%"><img src="/assets/img/normal/about_2_shape1.png" alt="shapes"></div> -->
+        <!-- <div class="shape-mockup jump d-md-block d-none" data-right="0" data-bottom="10%"><img src="/mindcartergit/assets/img/normal/about_2_shape1.png" alt="shapes"></div> -->
         <div class="container">
             <div class="row flex-row-reverse align-items-center">
                 <div class="col-xl-6 mb-50 mb-xl-0">
                     <div class="img-box2 tilt-active">
                         <div class="img1">
-                            <img src="/assets/img/009Q.jpg" alt="About" class=" z-[]">
+                            <img src="/mindcartergit/assets/img/009Q.jpg" alt="About" class=" z-[]">
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="about2-title-wrap">
-                            <span class="sub-title2 flex"><img class="me-1" src="/assets/img/icon/subtitle-img2-1.svg" alt="img">About</span>
+                            <span class="sub-title2 flex"><img class="me-1" src="/mindcartergit/assets/img/icon/subtitle-img2-1.svg" alt="img">About</span>
                         <p class="mt-n2 mb-25">Welcome to MindCarter&#39;s innovative Personality-Based Coaching Program, designed exclusively for
                             start-up founders and their teams. Our program offers a unique and tailored approach to personal and
                             professional development by harnessing the power of individual personality traits to drive success in the
@@ -130,7 +130,7 @@ About Area
 Service Area  
 ==============================-->
 
-<section class="space overflow-hidden" data-bg-src="/assets/img/1.png" id="service-sec">
+<section class="space overflow-hidden" data-bg-src="/mindcartergit/assets/img/1.png" id="service-sec">
     <div class="container">
         <div class="title-area text-center">
             <span class="sub-title6 justify-content-center text-white"><span class="shape left"><span class="dots"></span></span> Why Personality-Based Coaching Matters <span class="shape right"><span class="dots"></span></span> </span>
@@ -144,7 +144,7 @@ Service Area
 </section>
 
 
-<section class=" pt-20 pb-10 overflow-hidden" data-bg-src="assets/img/bg10.jpg" id="service-sec">
+<section class=" pt-20 pb-10 overflow-hidden" data-bg-src="/mindcartergit/assets/img/bg10.jpg" id="service-sec">
     <div class="container">
         <div class="title-area text-center">
             <span class="sub-title6 justify-content-center"><span class="shape left"><span class="dots"></span></span>Benefits to Founders and Employees <span class="shape right"><span class="dots"></span></span> </span>
@@ -154,7 +154,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/update1/icon/about_1_2.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/update1/icon/about_1_2.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Personalized Development</h3>
@@ -166,7 +166,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/update1/icon/service_4_2.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/update1/icon/service_4_2.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Improved Organizational Performance</h3>
@@ -178,7 +178,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/update1/icon/a_feature_1_2.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/update1/icon/a_feature_1_2.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Leadership Development</h3>
@@ -190,7 +190,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/update1/icon/feature_3_1.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/update1/icon/feature_3_1.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Growth and Success</h3>
@@ -202,7 +202,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/icon/about-grid-icon1.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/icon/about-grid-icon1.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Supportive Work Environment</h3>
@@ -214,7 +214,7 @@ Service Area
             <div class="col-md-6 col-lg-4 service-list-wrap">
                 <div class="service-list">
                     <div class="service-list_icon">
-                        <img src="assets/img/update1/icon/a_feature_1_1.svg" alt="Icon">
+                        <img src="/mindcartergit/assets/img/update1/icon/a_feature_1_1.svg" alt="Icon">
                     </div>
                     <div class="service-list_content">
                         <h3 class="service-list_title box-title" data-bs-toggle="modal" data-bs-target="#serviceModal">Targeted Support</h3>
@@ -240,7 +240,7 @@ Service Area
 
 
 
-<section class=" py-16 testi-sec" data-bg-src="/assets/img/bg0.png">
+<section class=" py-16 testi-sec" data-bg-src="/mindcartergit/assets/img/bg0.png">
     <div class="container">
        
         <div class="row justify-content-end">
@@ -268,7 +268,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_1.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_1.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Enhanced Self-Awareness</h3>
@@ -282,7 +282,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_2.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_2.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Personal Development</h3>
@@ -295,7 +295,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Goal Achievement</h3>
@@ -309,7 +309,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Optimized Communication</h3>
@@ -323,7 +323,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Improved Decision-Making</h3>
@@ -337,7 +337,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Conflict Management</h3>
@@ -350,7 +350,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Leadership Development</h3>
@@ -364,7 +364,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Career Advancement</h3>
@@ -378,7 +378,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Team Building</h3>
@@ -392,7 +392,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Innovation and Creativity</h3>
@@ -405,7 +405,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Adaptability and Change Management</h3>
@@ -418,7 +418,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Work-Life Balance</h3>
@@ -432,7 +432,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             <div class="testi-box_img">
-                                <img src="/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
+                                <img src="/mindcartergit/assets/img/update1/testimonial/testi_1_3.jpg" alt="Avater">
                             </div>
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Long-term Growth</h3>
@@ -455,13 +455,13 @@ Service Area
 
 
 <!-- strature -->
-<div class="space"  data-bg-src="assets/img/bgh.png" >
+<div class="space"  data-bg-src="/mindcartergit/assets/img/bgh.png" >
     <div class="container">
         <div class="flex flex-row-reverse">
             <div class="md:w-1/3">
                 <div class="img-box2 tilt-active">
                     <div class="img1">
-                        <img src="/assets/img/note.png" alt="About" class=" z-[]">
+                        <img src="/mindcartergit/assets/img/note.png" alt="About" class=" z-[]">
                     </div>
                 </div>
             </div>
@@ -547,7 +547,7 @@ Service Area
             </div>
         </div>
     </div>
-    <!-- <div class="shape-mockup d-none d-xl-block" data-bottom="0%" data-right="0"><img src="assets/img/update1/shape/building_1.png" alt="shape"></div> -->
+    <!-- <div class="shape-mockup d-none d-xl-block" data-bottom="0%" data-right="0"><img src="/mindcartergit/assets/img/update1/shape/building_1.png" alt="shape"></div> -->
 </div>
 
 <footer class=" bg-[#0e121d] flex justify-between py-8 text-white">
