--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,12 @@ import Layout from '../layouts/Layout.astro';
 
 
 
-    <div class="preloader ">
+    <!-- <div class="preloader ">
         <button class="th-btn style3 preloaderCls">Cancel Preloader </button>
         <div class="preloader-inner">
             <span class="loader"></span>
         </div>
-    </div>
+    </div> -->
 
 
 <!-- ==============================--> 
