--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Konta - Construction & Real Estate Company HTML Template - Home Two</title>
+    <title>Kerala Startup Mission | MindCarter</title>
     <meta name="author" content="themeholy">
     <meta name="description" content="Konta - Construction & Real Estate Company HTML Template">
     <meta name="keywords" content="Konta - Construction & Real Estate Company HTML Template">
