--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Kerala Startup Mission | MindCarter</title>
     <meta name="author" content="themeholy">
-    <meta name="description" content="Konta - Construction & Real Estate Company HTML Template">
-    <meta name="keywords" content="Konta - Construction & Real Estate Company HTML Template">
+    <meta name="description" content="Kerala Startup Mission | MindCarter">
+    <meta name="keywords" content="Kerala Startup Mission | MindCarter">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
