--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -447,7 +447,7 @@ Service Area
                     </span>
                    
                 </div>
-                <p class="mt-n2 mb-30">The program follows a structured process that aims to enhance personal and professional
+                <p class="mt-n2 mb-30 text-lg">The program follows a structured process that aims to enhance personal and professional
                     development. Here&#39;s an outline of the process</p>
              
                
