--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -453,12 +453,12 @@ Service Area
                
                 <div class=" md:w-3/4 w-full mx-auto">
                     <div class="mission-area ">
-                        <div class="tab-menu3 filter-menu-active">
-                            <button data-filter=".cat1" class="active" type="button" class="md:text-lg text-sm"><span class=" text-xs">Step</span>1</button>
-                            <button data-filter=".cat2" type="button" class="md:text-lg text-sm"><span class=" text-xs">Step</span>2</button>
-                            <button data-filter=".cat3" type="button" class="md:text-lg text-sm"><span class=" text-xs">Step</span>3</button>
-                            <button data-filter=".cat4" type="button" class="md:text-lg text-sm"><span class=" text-xs">Step</span>4</button>
-                            <button data-filter=".cat5" type="button" class="md:text-lg text-sm"><span class=" text-xs">Step</span>5</button>
+                        <div class="tab-menu3 filter-menu-active md:gap-8 gap-2">
+                            <button data-filter=".cat1" class="active" type="button" ><span class="text-xs">Step </span><span class="md:text-2xl text-lg">1</span></button>
+                            <button data-filter=".cat2" type="button" class="md:text-2xl text-lg"><span class=" text-xs">Step </span>2</button>
+                            <button data-filter=".cat3" type="button" class="md:text-2xl text-lg"><span class=" text-xs">Step </span>3</button>
+                            <button data-filter=".cat4" type="button" class="md:text-2xl text-lg"><span class=" text-xs">Step </span>4</button>
+                            <button data-filter=".cat5" type="button" class="md:text-2xl text-lg"><span class=" text-xs">Step </span>5</button>
                           
                         </div>
                         <div class="mission-box-wrap filter-active-cat1">
