--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import Layout from '../layouts/Layout.astro';
                                     </li>
                                 </ul>
                             </nav>
-                            <a  class="th-btn style3 ml-15">Apply Now<i class="fas fa-arrow-right ms-1"></i></a>
+                            <a target="_blank"  href="https://forms.zohopublic.com/keralastartupmission/form/KeralaStartupMissionMindCarter/formperma/vPsKjH_AJoyoncOCt-p46hRqKsbwFz8DlSHP2kkK5cs" class="th-btn style3 ml-15">Apply Now<i class="fas fa-arrow-right ms-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@ Hero Area
                         <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s" style="text-transform: uppercase;" >Respect their Uniqueness Improve Productivity retain them
                         </p>
                         <div class="btn-group" data-ani="slideinup" data-ani-delay="0.5s">
-                            <a href="/" class="th-btn style3">Apply Now<i class="fas fa-long-arrow-right ms-2"></i></a>
+                            <a href="https://forms.zohopublic.com/keralastartupmission/form/KeralaStartupMissionMindCarter/formperma/vPsKjH_AJoyoncOCt-p46hRqKsbwFz8DlSHP2kkK5cs" target="_blank" class="th-btn style3">Apply Now<i class="fas fa-long-arrow-right ms-2"></i></a>
                             <!-- <a href="contact.html" class="th-btn style2">CONTACT US<i class="fas fa-long-arrow-right ms-2"></i></a> -->
                         </div>
                     </div>
