--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ About Area
     <div class="overflow-hidden pt-24 pb-10" id="about-sec">
         <!-- <div class="shape-mockup jump d-md-block d-none" data-right="0" data-bottom="10%"><img src="/mindcartergit/assets/img/normal/about_2_shape1.png" alt="shapes"></div> -->
         <div class="container">
-            <div class="row flex-row-reverse align-items-center">
+            <div class="row flex-row-reverse ">
                 <div class="col-xl-6 mb-50 mb-xl-0">
                     <div class="img-box2 tilt-active">
                         <div class="img1">
@@ -101,9 +101,9 @@ About Area
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="about2-title-wrap">
-                            <span class="sub-title2 flex"><img class="me-1" src="/mindcartergit/assets/img/icon/subtitle-img2-1.svg" alt="img">About</span>
+                <div class="col-xl-6 ">
+                    <div class="about2-title-wrap ">
+                        <span class="sub-title2 flex"><img class="me-1" src="/mindcartergit/assets/img/icon/subtitle-img2-1.svg" alt="img">About</span>
                         <p class="mt-n2 mb-25 text-justify">Welcome to MindCarter&#39;s innovative Personality-Based Coaching Program, designed exclusively for
                             start-up founders and their teams. Our program offers a unique and tailored approach to personal and
                             professional development by harnessing the power of individual personality traits to drive success in the
