--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -293,7 +293,7 @@ Service Area
                             
                             <div class="testi-box_content h-[40vh]">
                                 <h3 class="testi-box_name">Goal Achievement</h3>
-                                <p class="testi-box_text">coaching techniques to match your personality, increasing the
+                                <p class="testi-box_text">Customize coaching techniques to match your personality, increasing the
                                     likelihood of setting and achieving meaningful goals and enhancing motivation.</p>
                             </div>
                         </div>
@@ -543,10 +543,10 @@ Service Area
     
     <div class="container">
         <div class=" flex justify-between">
-            <p class=" text-white">Copyright © 2023 All Rights Reserved.</p>
+            <p class=" text-white sm:text-base text-sm">Copyright © 2023 All Rights Reserved.</p>
             <p class="">
                 
-                <p class=" text-white"><a href="https://startupmission.kerala.gov.in/" target="_blank">Powered by Kerala Startup Mission ®</a></p>
+                <p class=" text-white sm:text-base text-sm"><a href="https://startupmission.kerala.gov.in/" target="_blank">Powered by Kerala Startup Mission ®</a></p>
             </p>
         </div>
     </div>
