--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -268,7 +268,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Enhanced Self-Awareness</h3>
                                 <!-- <span class="testi-box_desig">CEO of Maithon</span> -->
                                 <p class="testi-box_text ">Gain deeper insights into your personality traits, strengths,
@@ -280,7 +280,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Personal Development</h3>
                                 <p class="testi-box_text">Leverage your inherent traits to develop skills, behaviors, and habits
                                     that align with your personality, boosting self-confidence, communication skills, and emotional
@@ -291,7 +291,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Goal Achievement</h3>
                                 <p class="testi-box_text">Customize coaching techniques to match your personality, increasing the
                                     likelihood of setting and achieving meaningful goals and enhancing motivation.</p>
@@ -303,7 +303,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Optimized Communication</h3>
                                 <p class="testi-box_text">Learn how to communicate and collaborate effectively with others
                                     based on personality traits, resulting in improved team dynamics, conflict resolution, and
@@ -315,7 +315,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Improved Decision-Making</h3>
                                 <p class="testi-box_text">Make decisions that align with your personality and values, leading
                                     to more authentic and sustainable choices in both personal and professional contexts.</p>
@@ -327,7 +327,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Conflict Management</h3>
                                 <p class="testi-box_text">Develop strategies to manage conflicts in ways that resonate with your
                                     personality, reducing friction and enhancing overall well-being.</p>
@@ -338,7 +338,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Leadership Development</h3>
                                 <p class="testi-box_text">Capitalize on your natural leadership tendencies to nurture authentic
                                     and influential leadership styles.</p>
@@ -350,7 +350,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Career Advancement</h3>
                                 <p class="testi-box_text">Align your career choices with your personality traits and strengths for
                                     more fulfilling and successful career paths.</p>
@@ -362,7 +362,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Team Building</h3>
                                 <p class="testi-box_text">Understand each team member&#39;s personality traits to improve collaboration,
                                     communication, and overall team performance.</p>
@@ -374,7 +374,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Innovation and Creativity</h3>
                                 <p class="testi-box_text">Embrace an environment where unique personality traits contribute
                                     to innovative thinking and problem-solving.</p>
@@ -385,7 +385,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Adaptability and Change Management</h3>
                                 <p class="testi-box_text">Navigate challenges and embrace new opportunities by
                                     leveraging your personality traits.</p>
@@ -396,7 +396,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                            
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Work-Life Balance</h3>
                                 <p class="testi-box_text">Create a work-life balance that aligns with your personality preferences to
                                     reduce burnout.</p>
@@ -408,7 +408,7 @@ Service Area
                     <div class="col-lg-6">
                         <div class="testi-box">
                             
-                            <div class="testi-box_content h-[40vh]">
+                            <div class="testi-box_content sm:h-[40vh] h-[34vh]">
                                 <h3 class="testi-box_name">Long-term Growth</h3>
                                 <p class="testi-box_text">Continue using your self-awareness and personalized strategies beyond the
                                     coaching program for ongoing personal and professional development.</p>
